Fixed the alignment issue while displaying cell in rendermime

--- a/packages/rendermime/style/base.css
+++ b/packages/rendermime/style/base.css
@@ -22,6 +22,7 @@
   border: none;
   margin: 0px;
   padding: 0px;
+  line-height: normal;
 }
 
 /* console foregrounds and backgrounds */
